[gd_scene load_steps=11 format=3 uid="uid://c6maulcewyhy5"]

[ext_resource type="Script" uid="uid://bgj25qi5j8dgh" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dl14flc0fkeyt" path="res://axis_arrow3d/axis_arrow_3d.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c6cct2gj2a3im" path="res://timed_message/timed_message.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://ces3a6yv0c5fi" path="res://moving_carmera_light/moving_camera_light.tscn" id="8_5vw27"]

[sub_resource type="Theme" id="Theme_h2yge"]
default_font_size = 48

[sub_resource type="SystemFont" id="SystemFont_bejao"]

[sub_resource type="Theme" id="Theme_7mycd"]
resource_local_to_scene = true
default_font = SubResource("SystemFont_bejao")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1bvp3"]

[sub_resource type="Sky" id="Sky_lquwl"]
sky_material = SubResource("ProceduralSkyMaterial_1bvp3")

[sub_resource type="Environment" id="Environment_7mycd"]
background_mode = 2
sky = SubResource("Sky_lquwl")

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 5, 15)
shadow_enabled = true
shadow_opacity = 0.5
omni_range = 1000.0
omni_attenuation = 0.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true
directional_shadow_max_distance = 1000.0
sky_mode = 1

[node name="왼쪽패널" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_h2yge")

[node name="오른쪽패널" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.501961)
offset_right = 344.0
offset_bottom = 371.0
theme = SubResource("Theme_h2yge")

[node name="LabelPerformance" type="Label" parent="오른쪽패널"]
layout_mode = 2
autowrap_mode = 3

[node name="LabelInfo" type="Label" parent="오른쪽패널"]
layout_mode = 2
autowrap_mode = 3

[node name="TimedMessage" parent="." instance=ExtResource("5_lquwl")]
self_modulate = Color(1, 1, 1, 0.498039)
theme = SubResource("Theme_7mycd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7mycd")

[node name="AxisArrow3D" parent="." instance=ExtResource("4_1bvp3")]

[node name="FixedCameraLight" parent="." instance=ExtResource("8_5vw27")]

[node name="MovingCameraLightHober" parent="." instance=ExtResource("8_5vw27")]

[node name="MovingCameraLightAround" parent="." instance=ExtResource("8_5vw27")]
